Fix height bug on small displays

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -73,8 +73,7 @@ a.pswp-gallery__item {
 img.lightbox {
 	object-fit: cover;
 	width: 100%;
-	height: auto;
-	max-height: 260px;
+	height: 260px;
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
